--- a/BlazorDemo/appsettings.json
+++ b/BlazorDemo/appsettings.json
@@ -6,8 +6,5 @@
             "Microsoft.Hosting.Lifetime": "Information"
         }
     },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "Default": "Data Source=DESKTOP-C936017;Initial Catalog=BlazorDemoDB;Integrated Security=True"
-    }
+    "AllowedHosts": "*"
 }
