--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -7,5 +7,7 @@
         }
     },
     "AllowedHosts": "*",
-    
+    "ConnectionStrings": {
+        "Default": "Data Source=DESKTOP-C936017;Initial Catalog=BlazorDemoDB;Integrated Security=True"
+    }
 }
